--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "axios": "^1.7.2",
+    "gitmoji-cli": "^9.4.0",
+    "jwt-decode": "^4.0.0",
     "next": "14.2.5",
     "next-images": "^1.8.5",
     "react": "^18",
