--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "axios": "^1.7.2",
+    "gitmoji-cli": "^9.4.0",
+    "jwt-decode": "^4.0.0",
     "next": "14.2.5",
     "next-images": "^1.8.5",
     "react": "^18",
@@ -20,6 +22,7 @@
     "react-router-dom": "^6.25.1"
   },
   "devDependencies": {
+    "@types/jwt-decode": "^3.1.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
